简化了grid相关的类名

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </style>
 </head>
 <body>
-  <div class="main fr f-14">
-    <div class="f-1 c-8 p-30">
+  <div class="main c-8 fr f-14">
+    <div class="f-1 p-30">
       <div class="p-10">
         <h1>这是一级标题</h1>
         <h2>这是二级标题</h2>
@@ -39,11 +39,12 @@
       <div class="p-10 m-10 bd bc-2">
         <p class="mb-10">.dg.gfr.gc-4.gr-3.gg-10</p>
         <div class="dg gc-4 gr-3 gg-10" style="height:300px;">
-          <div class="bg-2 gcs-1 grs-2 ct">.gcs-1.grs-2</div>
-          <div class="bg-2 gcs-2 grs-2 ct">.gcs-2.grs-2</div>
-          <div class="bg-2 gcs-1 grs-2 ct">.gcs-1.grs-2</div>
-          <div class="bg-2 gcs-2 grs-1 ct">.gcs-2.grs-1</div>
-          <div class="bg-2 gcs-2 grs-1 ct">.gcs-2.grs-1</div>
+          <div class="bg-2 cs-1 rs-1 ct hv-2">.cs-1.rs-1</div>
+          <div class="bg-2 cs-2 rs-2 ct hv-2">.cs-2.rs-2</div>
+          <div class="bg-2 cs-1 rs-2 ct hv-2">.cs-1.rs-2</div>
+          <div class="bg-2 cs-1 rs-1 ct hv-2">.cs-1.rs-1</div>
+          <div class="bg-2 cs-2 rs-1 ct hv-2">.cs-2.rs-1</div>
+          <div class="bg-2 cs-2 rs-1 ct hv-2">.cs-2.rs-1</div>
         </div>
       </div>
     </div>
