--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <div class="main c-8 fr f-14">
+  <div class="main c-8 fr fs-14 usn">
     <div class="f-1 p-30">
       <div class="p-10">
         <h1>这是一级标题</h1>
@@ -28,8 +28,8 @@
         <select name="" id="" class="p-5 bc-2 m-10 r-4">
           <option value="1">你好</option>
         </select>
-        <button class="m-10 hv-2 p-5 r-4">Button</button>
-        <button class="m-10 hv-2 bc-2 p-5 r-4">Button</button>
+        <button class="m-10 hv-1 p-5 r-4 at-1">Button</button>
+        <button class="m-10 hv-1 bc-2 p-5 r-4 at-1">Button</button>
         <a class="m-10" href="#">链接</a>
       </div>
       <div>
@@ -40,7 +40,7 @@
         <p class="mb-10">.dg.gfr.gc-4.gr-3.gg-10</p>
         <div class="dg gc-4 gr-3 gg-10" style="height:300px;">
           <div class="bg-2 cs-1 rs-1 ct hv-2">.cs-1.rs-1</div>
-          <div class="bg-2 cs-2 rs-2 ct hv-2">.cs-2.rs-2</div>
+          <div class="bg-2 cs-2 rs-2 ct hv-2 at-2">.cs-2.rs-2</div>
           <div class="bg-2 cs-1 rs-2 ct hv-2">.cs-1.rs-2</div>
           <div class="bg-2 cs-1 rs-1 ct hv-2">.cs-1.rs-1</div>
           <div class="bg-2 cs-2 rs-1 ct hv-2">.cs-2.rs-1</div>
