增强了网格布局

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <button class="m-10 hv-1 bc-2 p-5 r-4 at-1">Button</button>
         <a class="m-10" href="#">链接</a>
       </div>
-      <div>
+      <div class="fr as">
         <textarea class="p-5 bc-2 m-10 r-4" name="" id="" cols="30" rows="3"></textarea>
         <textarea class="p-5 bg-2 m-10 r-4" name="" id="" cols="30" rows="3"></textarea>
       </div>
       <div class="p-10 m-10 bd bc-2">
         <p class="mb-10">.dg.gfr.gc-4.gr-3.gg-10</p>
-        <div class="dg gc-4 gr-3 gg-10" style="height:300px;">
-          <div class="bg-2 cs-1 rs-1 ct hv-2">.cs-1.rs-1</div>
-          <div class="bg-2 cs-2 rs-2 ct hv-2 at-2">.cs-2.rs-2</div>
-          <div class="bg-2 cs-1 rs-2 ct hv-2">.cs-1.rs-2</div>
-          <div class="bg-2 cs-1 rs-1 ct hv-2">.cs-1.rs-1</div>
-          <div class="bg-2 cs-2 rs-1 ct hv-2">.cs-2.rs-1</div>
-          <div class="bg-2 cs-2 rs-1 ct hv-2">.cs-2.rs-1</div>
+        <div class="gfr gc-4 gr-3 gg-10" style="height:300px;">
+          <div class="bg-2"></div>
+          <div class="bg-2 gcs-1 grs-2"></div>
+          <div class="bg-2 cs-2 rs-2"></div>
+          <div class="bg-2 cs-1 rs-2"></div>
+          <div class="bg-2 cs-2 rs-1"></div>
+          <div class="bg-2 cs-2 rs-1"></div>
         </div>
       </div>
     </div>
