去掉不常用背景色，修复边框错误问题

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="main c-8 fr fs-14 usn">
-    <div class="f-1 p-30">
+    <div class="pr f-1 p-30">
       <div class="p-10">
         <h1>这是一级标题</h1>
         <h2>这是二级标题</h2>
@@ -36,7 +36,7 @@
         <textarea class="p-5 bc-2 m-10 r-4" name="" id="" cols="30" rows="3"></textarea>
         <textarea class="p-5 bg-2 m-10 r-4" name="" id="" cols="30" rows="3"></textarea>
       </div>
-      <div class="p-10 m-10 bd bc-2">
+      <div class="p-10 m-10 bd bc-2 r-4">
         <p class="mb-10">.dg.gfr.gc-4.gr-3.gg-10</p>
         <div class="gfr gc-4 gr-3 gg-10" style="height:300px;">
           <div class="bg-2"></div>
@@ -46,6 +46,20 @@
           <div class="bg-2 cs-2 rs-1"></div>
           <div class="bg-2 cs-2 rs-1"></div>
         </div>
+      </div>
+      <div class="m-10">
+        <table class="wf">
+          <tr class="hv-1">
+            <th class="bb bc-1 p-5">aldfjla</th>
+            <th class="bb bc-1 p-5">aldfjla</th>
+            <th class="bb bc-1 p-5">aldfjla</th>
+          </tr>
+          <tr class="hv-1">
+            <td class="bb bc-1 p-5">aldfjla</td>
+            <td class="bb bc-1 p-5">aldfjla</td>
+            <td class="bb bc-1 p-5">aldfjla</td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
