--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <style>
     html, body{height: 100%;}
     .main{min-height: 100%;}
+    textarea{resize: none;}
   </style>
 </head>
 <body>
   <div class="main c-8 fr fs-14 usn">
-    <div class="pr f-1 p-30">
+    <div class="pr f-1 p-30 bg-f">
       <div class="p-10">
-        <h1>这是一级标题</h1>
+        <h1 class="bd bc-2 p-15 my-10 bg-1">这是一级标题</h1>
         <h2>这是二级标题</h2>
         <h3>这是三级标题</h3>
         <h4>这是四级标题</h4>
@@ -33,8 +34,8 @@
         <a class="m-10" href="#">链接</a>
       </div>
       <div class="fr as">
-        <textarea class="p-5 bc-2 m-10 r-4" name="" id="" cols="30" rows="3"></textarea>
-        <textarea class="p-5 bg-2 m-10 r-4" name="" id="" cols="30" rows="3"></textarea>
+        <textarea class="p-5 bc-2 m-10 r-4" placeholder="请输入" cols="30" rows="3"></textarea>
+        <textarea class="p-5 bg-2 m-10 r-4" placeholder="请输入" cols="30" rows="3"></textarea>
       </div>
       <div class="p-10 m-10 bd bc-2 r-4">
         <p class="mb-10">.dg.gfr.gc-4.gr-3.gg-10</p>
@@ -61,6 +62,13 @@
           </tr>
         </table>
       </div>
+      <div class="fr mt-20" style="height: 100px;">
+        <div class="f-1 bs-1 bg-f mx-10"></div>
+        <div class="f-1 bs-2 bg-f mx-10"></div>
+        <div class="f-1 bs-3 bg-f mx-10"></div>
+        <div class="f-1 bs-4 bg-f mx-10"></div>
+        <div class="f-1 bs-5 bg-f mx-10"></div>
+      </div>
     </div>
   </div>
 
@@ -68,7 +76,6 @@
   <script>
     var left = document.querySelector('.main>.f-1').cloneNode(true)
     left.classList.add('dk')
-    left.style.backgroundColor = '#1f262f'
     document.querySelector('.main').appendChild(left)
   </script>
 </body>
