--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="main c-8 fr fs-14 usn">
     <div class="pr f-1 p-30 bg-f">
       <div class="p-10">
-        <h1 class="bd bc-2 p-15 my-10 bg-1">这是一级标题</h1>
+        <h1>这是一级标题</h1>
         <h2>这是二级标题</h2>
         <h3>这是三级标题</h3>
         <h4>这是四级标题</h4>
@@ -37,37 +37,34 @@
         <textarea class="p-5 bc-2 m-10 r-4" placeholder="请输入" cols="30" rows="3"></textarea>
         <textarea class="p-5 bg-2 m-10 r-4" placeholder="请输入" cols="30" rows="3"></textarea>
       </div>
-      <div class="p-10 m-10 bd bc-2 r-4">
-        <p class="mb-10">.dg.gfr.gc-4.gr-3.gg-10</p>
-        <div class="gfr gc-4 gr-3 gg-10" style="height:300px;">
-          <div class="bg-2"></div>
-          <div class="bg-2 gcs-1 grs-2"></div>
-          <div class="bg-2 cs-2 rs-2"></div>
-          <div class="bg-2 cs-1 rs-2"></div>
-          <div class="bg-2 cs-2 rs-1"></div>
-          <div class="bg-2 cs-2 rs-1"></div>
-        </div>
+      <div class="gfr gc-4 gr-3 gg-10 m-10" style="height:300px;">
+        <div class="bg-2 ct">网格布局</div>
+        <div class="bg-2 gcs-1 grs-2"></div>
+        <div class="bg-2 cs-2 rs-2"></div>
+        <div class="bg-2 cs-1 rs-2"></div>
+        <div class="bg-2 cs-2 rs-1"></div>
+        <div class="bg-2 cs-2 rs-1"></div>
       </div>
-      <div class="m-10">
+      <div class="m-10 mt-30">
         <table class="wf">
           <tr class="hv-1">
-            <th class="bb bc-1 p-5">aldfjla</th>
-            <th class="bb bc-1 p-5">aldfjla</th>
-            <th class="bb bc-1 p-5">aldfjla</th>
+            <th class="by bc-1 p-5">表格</th>
+            <th class="by bc-1 p-5">Hello</th>
+            <th class="by bc-1 p-5">Hello</th>
           </tr>
           <tr class="hv-1">
-            <td class="bb bc-1 p-5">aldfjla</td>
-            <td class="bb bc-1 p-5">aldfjla</td>
-            <td class="bb bc-1 p-5">aldfjla</td>
+            <td class="by bc-1 p-5">Hello</td>
+            <td class="by bc-1 p-5">Hello</td>
+            <td class="by bc-1 p-5">Hello</td>
           </tr>
         </table>
       </div>
       <div class="fr mt-20" style="height: 100px;">
-        <div class="f-1 bs-1 bg-f mx-10"></div>
-        <div class="f-1 bs-2 bg-f mx-10"></div>
-        <div class="f-1 bs-3 bg-f mx-10"></div>
-        <div class="f-1 bs-4 bg-f mx-10"></div>
-        <div class="f-1 bs-5 bg-f mx-10"></div>
+        <div class="f-1 bs-1 mx-10 ct">阴影</div>
+        <div class="f-1 bs-2 mx-10"></div>
+        <div class="f-1 bs-3 mx-10"></div>
+        <div class="f-1 bs-4 mx-10"></div>
+        <div class="f-1 bs-5 mx-10"></div>
       </div>
     </div>
   </div>
