--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/init.css">
-  <link rel="stylesheet" href="./css/layout.css">
-  <link rel="stylesheet" href="./css/values.css">
-  <link rel="stylesheet" href="./css/grid.css">
+  <link rel="stylesheet" href="./css/index.css">
   <title>Layout.css</title>
   <style>
     html, body{height: 100%;}
