提取变量；优化了交互样式

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </style>
 </head>
 <body>
+  <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd hv:bg-1 at:c-9 fo:bc-4">测试文字</h1> -->
   <div class="main c-8 fr fs-14 usn">
     <div class="pr f-1 p-30 bg-f">
       <div class="p-10">
@@ -26,8 +27,8 @@
         <select name="" id="" class="p-5 bc-2 m-10 r-4">
           <option value="1">你好</option>
         </select>
-        <button class="m-10 hv-1 p-5 r-4 at-1">Button</button>
-        <button class="m-10 hv-1 bc-2 p-5 r-4 at-1">Button</button>
+        <button class="m-10 hv:bg-1 p-5 r-4 at:bg-2 fo:bc-2">Button</button>
+        <button class="m-10 hv:bg-1 bc-2 p-5 r-4 at:bg-2 fo:bc-4">Button</button>
         <a class="m-10" href="#">链接</a>
       </div>
       <div class="fr as">
@@ -44,12 +45,12 @@
       </div>
       <div class="m-10 mt-30">
         <table class="wf">
-          <tr class="hv-1">
+          <tr class="hv:bg-1">
             <th class="by bc-1 p-5">表格</th>
             <th class="by bc-1 p-5">Hello</th>
             <th class="by bc-1 p-5">Hello</th>
           </tr>
-          <tr class="hv-1">
+          <tr class="hv:bg-1">
             <td class="by bc-1 p-5">Hello</td>
             <td class="by bc-1 p-5">Hello</td>
             <td class="by bc-1 p-5">Hello</td>
