修复聚焦边框颜色错误问题

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>这里是正文</p>
       </div>
       <div class="fr ac">
-        <input type="text" class="p-5 bc-2 m-10 r-4" placeholder="请输入">
+        <input type="text" class="p-5 bc-2 m-10 r-4 fo:bc-4" placeholder="请输入">
         <select name="" id="" class="p-5 bc-2 m-10 r-4">
           <option value="1">你好</option>
         </select>
@@ -32,8 +32,8 @@
         <a class="m-10" href="#">链接</a>
       </div>
       <div class="fr as">
-        <textarea class="p-5 bc-2 m-10 r-4" placeholder="请输入" cols="30" rows="3"></textarea>
-        <textarea class="p-5 bg-2 m-10 r-4" placeholder="请输入" cols="30" rows="3"></textarea>
+        <textarea class="p-5 bc-2 m-10 r-4 fo:bc-4" placeholder="请输入" cols="30" rows="3"></textarea>
+        <textarea class="p-5 bg-2 m-10 r-4 fo:bc-3" placeholder="请输入" cols="30" rows="3"></textarea>
       </div>
       <div class="gfr gc-4 gr-3 gg-10 m-10" style="height:300px;">
         <div class="bg-2 ct">网格布局</div>
