--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
       </div>
       <div class="m-10 mt-30">
         <table class="wf">
-          <tr class="hv:bg-1">
-            <th class="by bc-1 p-5">表格</th>
-            <th class="by bc-1 p-5">Hello</th>
-            <th class="by bc-1 p-5">Hello</th>
+          <tr class="by bc-1 hv:bg-1">
+            <th class="p-5">表格</th>
+            <th class="p-5">Hello</th>
+            <th class="p-5">Hello</th>
           </tr>
-          <tr class="hv:bg-1">
-            <td class="by bc-1 p-5">Hello</td>
-            <td class="by bc-1 p-5">Hello</td>
-            <td class="by bc-1 p-5">Hello</td>
+          <tr class="by bc-1 hv:bg-1">
+            <td class="p-5">Hello</td>
+            <td class="p-5">Hello</td>
+            <td class="p-5">Hello</td>
           </tr>
         </table>
       </div>
