--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <textarea class="p-5 bc-2 m-10 r-4 fo:bc-4" placeholder="请输入" cols="30" rows="3"></textarea>
         <textarea class="p-5 bg-2 m-10 r-4 fo:bc-3" placeholder="请输入" cols="30" rows="3"></textarea>
       </div>
-      <div class="gfr gc-4 gr-3 gg-10 m-10" style="height:300px;">
+      <div class="gfr gtc-4 gr-3 gp-10 m-10" style="height:300px;">
         <div class="bg-2 ct">网格布局</div>
-        <div class="bg-2 gcs-1 grs-2"></div>
-        <div class="bg-2 cs-2 rs-2"></div>
-        <div class="bg-2 cs-1 rs-2"></div>
-        <div class="bg-2 cs-2 rs-1"></div>
-        <div class="bg-2 cs-2 rs-1"></div>
+        <div class="bg-2 gc-1 grs-2"></div>
+        <div class="bg-2 gc-2 gr-2"></div>
+        <div class="bg-2 gc-1 gr-2"></div>
+        <div class="bg-2 gc-2 gr-1"></div>
+        <div class="bg-2 gc-2 gr-1"></div>
       </div>
       <div class="m-10 mt-30">
         <table class="wf">
