更新了示例

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd hv:bg-1 at:c-9 fo:bc-4">测试文字</h1> -->
+  <!-- <h1 tabindex="1" class="m-10 bc-1 c-5 bd h:bg-1 a:c-9 f:bc-4">测试文字</h1> -->
   <div class="main c-8 fr fs-14 usn">
     <div class="pr f-1 p-30 bg-f">
       <div class="p-10">
@@ -23,17 +23,17 @@
         <p>这里是正文</p>
       </div>
       <div class="fr ac">
-        <input type="text" class="p-5 bc-2 m-10 r-4 fo:bc-4" placeholder="请输入">
+        <input type="text" class="p-5 bc-2 m-10 r-4 f:bc-4" placeholder="请输入">
         <select name="" id="" class="p-5 bc-2 m-10 r-4">
           <option value="1">你好</option>
         </select>
-        <button class="m-10 hv:bg-1 p-5 r-4 at:bg-2 fo:bc-2">Button</button>
-        <button class="m-10 hv:bg-1 bc-2 p-5 r-4 at:bg-2 fo:bc-4">Button</button>
+        <button class="m-10 h:bg-1 p-5 r-4 a:bg-2 f:bc-2">Button</button>
+        <button class="m-10 h:bg-1 bc-2 p-5 r-4 a:bg-2 f:bc-4">Button</button>
         <a class="m-10" href="#">链接</a>
       </div>
       <div class="fr as">
-        <textarea class="p-5 bc-2 m-10 r-4 fo:bc-4" placeholder="请输入" cols="30" rows="3"></textarea>
-        <textarea class="p-5 bg-2 m-10 r-4 fo:bc-3" placeholder="请输入" cols="30" rows="3"></textarea>
+        <textarea class="p-5 bc-2 m-10 r-4 f:bc-4" placeholder="请输入" cols="30" rows="3"></textarea>
+        <textarea class="p-5 bg-2 m-10 r-4 f:bc-3" placeholder="请输入" cols="30" rows="3"></textarea>
       </div>
       <div class="gfr gtc-4 gr-3 gp-10 m-10" style="height:300px;">
         <div class="bg-2 ct">网格布局</div>
@@ -45,12 +45,12 @@
       </div>
       <div class="m-10 mt-30">
         <table class="wf">
-          <tr class="by bc-1 hv:bg-1">
+          <tr class="by bc-1 h:bg-1">
             <th class="p-5">表格</th>
             <th class="p-5">Hello</th>
             <th class="p-5">Hello</th>
           </tr>
-          <tr class="by bc-1 hv:bg-1">
+          <tr class="by bc-1 h:bg-1">
             <td class="p-5">Hello</td>
             <td class="p-5">Hello</td>
             <td class="p-5">Hello</td>
