flex和grid布局增加了媒体查询

--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
         <h4>这是四级标题</h4>
         <p>这里是正文</p>
       </div>
+      <div class="fr p-10">
+        <div class="p-20 bg-2 f-1 md:f-3"></div>
+        <div class="bg-f p-5"></div>
+        <div class="p-20 bg-2 f-3 md:f-1"></div>
+      </div>
       <div class="fr ac">
         <input type="text" class="p-5 bc-2 m-10 r-4 f:bc-4" placeholder="请输入">
-        <select name="" id="" class="p-5 bc-2 m-10 r-4">
+        <select class="p-5 bc-2 m-10 r-4">
           <option value="1">你好</option>
         </select>
         <button class="m-10 h:bg-1 p-5 r-4 a:bg-2 f:bc-2">Button</button>
