优化了项目结构

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
 
 
   <script>
-    var left = document.querySelector('.main>.f-1').cloneNode(true)
-    left.classList.add('dk')
-    document.querySelector('.main').appendChild(left)
+    var right = document.querySelector('.main>.f-1').cloneNode(true)
+    right.classList.add('dk')
+    right.style.backgroundColor = '#111'
+    document.querySelector('.main').appendChild(right)
   </script>
 </body>
 </html>
