增加了彩色

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <textarea class="p-5 bg-2 m-10 r-4 f:bc-3" placeholder="请输入" cols="30" rows="3"></textarea>
       </div>
       <div class="gfr gtc-4 gr-3 gp-10 m-10" style="height:300px;">
-        <div class="bg-2 ct">网格布局</div>
-        <div class="bg-2 gc-1 grs-2"></div>
-        <div class="bg-2 gc-2 gr-2"></div>
-        <div class="bg-2 gc-1 gr-2"></div>
-        <div class="bg-2 gc-2 gr-1"></div>
-        <div class="bg-2 gc-2 gr-1"></div>
+        <div class="bg-blue-2 h:bg-blue-5 ct c-blue-10">网格布局</div>
+        <div class="bg-cyan-2 h:bg-cyan-5 gc-1 grs-2"></div>
+        <div class="bg-green-2 h:bg-green-5 gc-2 gr-2"></div>
+        <div class="bg-yellow-2 h:bg-yellow-5 gc-1 gr-2"></div>
+        <div class="bg-orange-2 h:bg-orange-5 gc-2 gr-1"></div>
+        <div class="bg-red-2 h:bg-red-5 gc-2 gr-1"></div>
       </div>
       <div class="m-10 mt-30">
         <table class="wf">
