--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <link rel="stylesheet" href="./dist/layout.css">
   <title>Layout.css</title>
   <style>
-    html, body{height: 100%;}
-    .main{min-height: 100%;}
     textarea{resize: none;}
   </style>
 </head>
@@ -23,30 +21,31 @@
         <p>这里是正文</p>
       </div>
       <div class="fr p-10">
-        <div class="p-20 bg-2 f-1 md:f-3"></div>
+        <div class="p-20 f-1 md:f-3 bg-red-2 bd bc-red-4"></div>
         <div class="bg-f p-5"></div>
-        <div class="p-20 bg-2 f-3 md:f-1"></div>
+        <div class="p-20 f-3 md:f-1 bg-orange-2 bd bc-orange-4"></div>
       </div>
       <div class="fr ac">
-        <input type="text" class="p-5 bc-2 m-10 r-4 f:bc-4" placeholder="请输入">
-        <select class="p-5 bc-2 m-10 r-4">
+        <input type="text" class="p-10 bc-1 m-10 r-4 f:bc-blue-10" placeholder="请输入">
+        <select class="p-10 bc-2 m-10 r-4">
           <option value="1">你好</option>
         </select>
-        <button class="m-10 h:bg-1 p-5 r-4 a:bg-2 f:bc-2">Button</button>
-        <button class="m-10 h:bg-1 bc-2 p-5 r-4 a:bg-2 f:bc-4">Button</button>
+        <button class="m-10 px-15 py-10 r-4 h:bg-1 a:bg-2 f:bc-2">Button</button>
+        <button class="m-10 px-15 py-10 r-4 h:bg-1 a:bg-2 f:bc-4 bc-2">Button</button>
+        <button class="m-10 px-15 py-10 r-4 bg-blue-8 c-white-10 h:bg-blue-10">Button</button>
         <a class="m-10" href="#">链接</a>
       </div>
       <div class="fr as">
-        <textarea class="p-5 bc-2 m-10 r-4 f:bc-4" placeholder="请输入" cols="30" rows="3"></textarea>
-        <textarea class="p-5 bg-2 m-10 r-4 f:bc-3" placeholder="请输入" cols="30" rows="3"></textarea>
+        <textarea class="p-10 bc-1 m-10 r-5 f:bc-blue-10" placeholder="请输入" cols="30" rows="3"></textarea>
+        <textarea class="p-10 bg-1 m-10 r-5 f:bc-blue-10 f:bg-blue-1" placeholder="请输入" cols="30" rows="3"></textarea>
       </div>
       <div class="gfr gtc-4 gr-3 gp-10 m-10" style="height:300px;">
-        <div class="bg-blue-2 h:bg-blue-10 h:c-white-10 ct c-blue-10">网格布局</div>
-        <div class="bg-cyan-2 h:bg-cyan-10 h:c-white-10 gc-1 grs-2"></div>
-        <div class="bg-green-2 h:bg-green-10 h:c-white-10 gc-2 gr-2"></div>
-        <div class="bg-yellow-2 h:bg-yellow-10 h:c-white-10 gc-1 gr-2"></div>
-        <div class="bg-orange-2 h:bg-orange-10 h:c-white-10 gc-2 gr-1"></div>
-        <div class="bg-red-2 h:bg-red-10 h:c-white-10 gc-2 gr-1"></div>
+        <div class="bg-blue-6 c-white-10 ct">网格布局</div>
+        <div class="bg-cyan-6 c-white-10 gc-1 grs-2"></div>
+        <div class="bg-green-6 c-white-10 gc-2 gr-2"></div>
+        <div class="bg-yellow-6 c-white-10 gc-1 gr-2"></div>
+        <div class="bg-orange-6 c-white-10 gc-2 gr-1"></div>
+        <div class="bg-red-6 c-white-10 gc-2 gr-1"></div>
       </div>
       <div class="m-10 mt-30">
         <table class="wf">
