优化了不同状态下的颜色覆盖问题

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </select>
         <button class="m-10 px-15 py-10 r-4 h:bg-1 a:bg-2 f:bc-2">Button</button>
         <button class="m-10 px-15 py-10 r-4 h:bg-1 a:bg-2 f:bc-4 bc-2">Button</button>
-        <button class="m-10 px-15 py-10 r-4 bg-blue-8 c-white-10 h:bg-blue-10">Button</button>
+        <button class="m-10 px-15 py-10 r-4 bg-blue-8 c-white-10 h:bg-blue-10 a:bg-blue-8">Button</button>
         <a class="m-10" href="#">链接</a>
       </div>
       <div class="fr as">
