--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </div>
       <div class="gfr gtc-4 gr-3 gp-10 m-10" style="height:300px;">
         <div class="bg-blue-6 c-white-10 ct">网格布局</div>
-        <div class="bg-cyan-6 c-white-10 gc-1 grs-2"></div>
+        <div class="bg-orange-6 c-white-10 gc-1 grs-2"></div>
         <div class="bg-green-6 c-white-10 gc-2 gr-2"></div>
-        <div class="bg-yellow-6 c-white-10 gc-1 gr-2"></div>
+        <div class="bg-blue-6 c-white-10 gc-1 gr-2"></div>
         <div class="bg-orange-6 c-white-10 gc-2 gr-1"></div>
         <div class="bg-red-6 c-white-10 gc-2 gr-1"></div>
       </div>
