--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
         <h4>这是四级标题</h4>
         <p>这里是正文</p>
       </div>
+      <div class="gfr gtc-4 gap-10 p-10 as">
+        <div class="bg-blue-6 p-20 sm:gc-4 md:gc-2"></div>
+        <div class="bg-blue-6 p-10 sm:gc-4 md:gc-2"></div>
+        <div class="bg-blue-6 p-10"></div>
+        <div class="bg-blue-6 p-10"></div>
+        <div class="bg-blue-6 p-10"></div>
+        <div class="bg-blue-6 p-10"></div>
+        <div class="bg-blue-6 p-10"></div>
+        <div class="bg-blue-6 p-10"></div>
+      </div>
       <div class="fr p-10">
         <div class="p-20 f-1 md:f-3 bg-red-2 bd bc-red-4 h:bg-red"></div>
         <div class="bg-f p-5"></div>
@@ -37,7 +47,7 @@
         <button class="m-10 px-15 py-10 r-4 h:bg-1 a:bg-2 f:bc-2 h:bs-3 trans-bs">Button</button>
         <button class="m-10 px-15 py-10 r-4 h:bg-1 a:bg-2 f:bc-4 bc-2">Button</button>
         <button class="m-10 px-15 py-10 r-4 bg-blue-8 c-white h:bg-blue a:bg-blue-8 trans">Button</button>
-        <a class="m-10 toe h:c-blue trans-c" href="#">链接</a>
+        <a class="m-10 toe h:c-blue h:u trans-c" href="#">链接</a>
       </div>
       <div class="fr as">
         <textarea class="p-10 bc-1 m-10 r-5 f:bc-blue" placeholder="请输入" cols="30" rows="3"></textarea>
