--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./dist/layout.css">
   <!--[if gte IE 10]>
-  <link rel="stylesheet" href="./dist/ie.css">
   <![endif]-->
+  <link rel="stylesheet" href="./dist/ie.css">
   <link rel="stylesheet" href="./dist/light.css" id="style">
   <link rel="stylesheet" href="./dist/color.css">
 
@@ -32,9 +32,10 @@
         <h4>这是四级标题</h4>
         <p>这里是正文</p>
       </div>
+
       <div class="gfr gtc-4 gap-10 p-10 as">
         <div class="r-3 bg-b-6 p-10 sm:gc-4 md:gc-2"></div>
-        <div class="r-3 bg-b-6 p-10 sm:gc-4 md:gc-2"></div>
+        <div class="r-3 bg-b-6 p-10 sm:gc-4 md:gc-2 md:gcs-3 sm:grs-2 sm:gcs-1"></div>
         <div class="r-3 bg-b-6 p-10"></div>
         <div class="r-3 bg-b-6 p-10"></div>
         <div class="r-3 bg-b-6 p-10"></div>
