调整暗色背景颜色

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ console.log(a + b);</pre>
       </div>
     </div>
     <div class="pf wf hf bg-blk-6 z-2 ct vh" id="dialog" style="left: 0;top: 0;">
-      <div class="p-15 bg r-10 bs-5" style="max-width: 280px;">
+      <div class="p-15 bg r-10 bs-5 bd bc-w-1" style="max-width: 280px;">
         <div class="fs-18 b p-10">Use Google's location service?</div>
         <div class="p-10">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</div>
         <div class="fr ac mt-10">
